--- a/index.html
+++ b/index.html
@@ -1,37 +1,35 @@
 <html>
+
     <head> 
         <title>Veronia's Website</title>
     </head>
+
     <body>
+
        <h1>Web Portfolio</h1>
-       <div>Veronia Tun<br>
-        veronia.tun@tis.edu.mo
-       </div>
-       <h2>Who am I</h2>
-       <p>
-        I am a Grade 10 Computer Science student studying in the International School of Macao. My course teacher is Mr. Robert Flower. 
-       </p>
+       <div>Veronia Tun<br/>
+        <a href="mailto:veronia.tun@tis.edu.mo">veronia.tun@tis.edu.mo
+        </div>
+        <p>
+        The name of the course is CSE.<br>
+        Teacher: Mr. Flower<br>
+        <a href="https://www.tis.edu.mo">School: The International School of Macao</a><br/>
+        Year: 2022-2023
+        </p>
 
-       <h2>MLA</h2>
-       <div>Information coming soon...</div>
-
-       <h2>Goals</h2>
-       <div>Information coming soon...</div>
-
-       <h2>Project</h2>
-       <div>Information coming soon...</div>
-
-       <h2>Process</h2>
-       <div>Information coming soon...</div>
-
-       <h2>Careers</h2>
-       <div>Information coming soon...</div>
-
-       <h2>Reflection</h2>
-       <div>Information coming soon...</div>
-
-       <h2>Vocabulary</h2>
-       <div>Information coming soon...</div>
+        <p>
+        Hello! Welcome to my Web Portfolio. At this website, you will go
+        </p>
+        <o>
+        <ul>
+        <a href="mla.html"><li><h2> MLA </h2></li></a>
+        <a href="goals.html"><li><h2> Goals </h2></li></a> 
+        <a href="project.html"><li><h2> Project </h2></li></a>
+        <a href="process.html"><li><h2> Process </h2></li></a>
+        <a href="careers.html"><li><h2> Careers </h2></li></a>
+        <a href="reflection.html"><li><h2> Reflection </h2></li></a>
+        <a href="vocabulary.html"><li><h2>Vocabulary </h2></li></a>
+        </ul>
 
     </body>
 </html>
