--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
        <h1>Web Portfolio</h1>
        <div>Veronia Tun<br/>
-        <a href="mailto:veronia.tun@tis.edu.mo">veronia.tun@tis.edu.mo
+        <a href="mailto:veronia.tun@tis.edu.mo">veronia.tun@tis.edu.mo</a>
         </div>
         <p>
         The name of the course is CSE.<br>
