--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
         <p>
         The name of the course is CSE.<br>
-        Teacher: Mr. Flower<br>
+        Teacher:<a href="mailto:robert.flower@tis.edu.mo">Mr. Flower</a><br>
         <a href="https://www.tis.edu.mo">School: The International School of Macao</a><br/>
         Year: 2022-2023
         </p>
