--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
     <body bgcolor = "Lavender">
         <h1>CSE Project</h1>
     
-        <h2><a href="https://github.com/veroniatun/Shooting-Platformer-Game/blob/main/main.py">Shooting Platformer Gameveroniatun.github.io</a></h2>
+        <h2><a href="https://github.com/veroniatun/Shooting-Platformer-Game/blob/main/main.py">Shooting Platformer Game</a></h2>
             This game is a platformer game. In order to earn points, the player has to:
             <ul>
                <li>kill enemies</li> 
@@ -13,7 +13,7 @@
                <li>collect green flags</li> 
             </ul> 
             By using the key Q, the player can shoot the enemies, including zombies and robots. The enemies have very high health points, which makes it hard to kill them.
-            There are three types of coins, including gold, silver and bronze coins.<br>
+            There are three types of coins, including gold, silver, and bronze coins.<br>
             <h3>Values:</h3>
             <ul>
                 <li>Zombie +100</li> 
