--- a/reflection.html
+++ b/reflection.html
@@ -7,7 +7,7 @@
         <h1>My Reflection</h1> 
              <div>
                 My project is a shooting platformer game made through Pyarcade, which is a Python module. 
-                Python is a programming language similar to the Pyret that I learned in the previous unit.
+                Python is a programming language similar to the Pyret that I learned in the previous unit. Both are about data science.
                 Pyret has Python-inspired syntax for functions, lists, and operators, while Python has slightly more complicated syntax.
             </div>
             <br>
