--- a/project.html
+++ b/project.html
@@ -24,5 +24,11 @@
                 <li>Bronze coin +1</li> 
              </ul> 
              You die and lose if you get into contact with the enemies!
+        <br>
+        <br>
+        <ul>
+        <a href="https://veroniatun.github.io/">Back to Index</a>
+        </ul> 
+
     </body>
 </html>
