--- a/goals.html
+++ b/goals.html
@@ -22,6 +22,12 @@
 
         (HOWEVER...... I did not come up with a completely new and original design -_-)
 
+            <br>
+        <br>
+        <ul>
+        <a href="https://veroniatun.github.io/">Back to Index</a>
+        </ul> 
+
 
     </body>
 </html>
