--- a/mla.html
+++ b/mla.html
@@ -38,6 +38,10 @@
             <p>“Window and View#.” Window and View - Python Arcade 2.6.17, <br/>
             api.arcade.academy/en/latest/api/window.html#arcade.Window. Accessed 15 June 2023.
         </p>
-             
+             <br>
+        <br>
+        <ul>
+        <a href="https://veroniatun.github.io/">Back to Index</a>
+        </ul> 
     </body>
 </html>
