--- a/reflection.html
+++ b/reflection.html
@@ -37,6 +37,11 @@
                 I changed several settings such as the characters, the health points, the frames to start and end, etc. and I debugged the gun-shooting part of the game.
                 The project mostly met the original goals that I set at the beginning of this project, as I was not able to make an original design.
             </div>
-            
+
+        <br>
+        <br>
+        <ul>
+        <a href="https://veroniatun.github.io/">Back to Index</a>
+        </ul> 
     </body>
 </html>
