--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         Email Address: <a href="mailto:veronia.tun@tis.edu.mo">veronia.tun@tis.edu.mo</a>
         
         <p>
-        The name of the course is CSE.<br>
+        The name of the course is CSE, meaning Computer Science.<br>
         Teacher: <a href="mailto:robert.flower@tis.edu.mo">Mr. Flower</a> <br>
         School: <a href="https://www.tis.edu.mo">The International School of Macao</a><br/>
         Year: 2022-2023
