--- a/vocabulary.html
+++ b/vocabulary.html
@@ -3,7 +3,7 @@
         <title>Veronia's Vocabulary</title>
     </head>
     <body bgcolor = "AliceBlue">
-        <h1>Vocabulary and Functions List</h1>
+        <h1>Terminology and Functions List</h1>
         
         <ul>
             <li>"def" in Python == "fun" in Pyret</li>
