--- a/mla.html
+++ b/mla.html
@@ -5,7 +5,9 @@
     
     <body><body bgcolor = "LightCyan"></body>
 
-        <h1>Resources that I have used:</h1>
+        <h1>Tools and Resources that I have used:</h1>
+
+        <h2>Tools:</h2> PyCharm CE (the software used to program the Pyarcade game)
 
         <h2>Works Cited</h2>
         
