--- a/careers.html
+++ b/careers.html
@@ -11,12 +11,13 @@
             <li>It helps to build independence and the ability to progress without the reliance of a teacher. </li>
              <br>
             <li>The skill of debugging also helps to develop my problem-figuring and problem-solving skills.</li>
-            <li>This allows me to find out the main bug of a problem in the future and that I can quickly find a resolution to the problem.</li>
+            <li>This allows me to find out the main bug of a problem in the future and I can quickly find a resolution to the problem.</li>
              
         </ul> 
 
+             <br>After this project, I am more interested in computer programming than before, and this has now been included in one of my future professions.
              <br>This recently acquired talent opens the door to a job as a programmer. 
-            </br>The knowledge gained during the creation of the game, not necessarily tailored just toward becoming a game producer, but can also be applied to many other areas of computer science. 
+             </br>The knowledge gained during the creation of the game, is not necessarily tailored just toward becoming a game producer, but can also be applied to many other areas of computer science. 
               
 
         <br>
